force-app/main/default/objects/ServiceAppointment/fields/address_complement__c.field-meta.xml
<CustomField>
    <fullName>address_complement__c</fullName>
    <description>Addres complement from WO</description>
    <label>Address complement</label>
    <length>200</length>
    <type>Text</type>
</CustomField>