force-app/main/default/objects/ServiceAppointment/fields/CoIT_Aproval_Failed_Status__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Aproval_Failed_Status__c</fullName>
    <label>Failed Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submited</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>