force-app/main/default/objects/ServiceAppointment/fields/CoIT_Assigned_Service_Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Assigned_Service_Resource_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Service Resource Id</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Service Appointments (Assigned Service Resource)</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>