force-app/main/default/objects/ServiceAppointment/fields/CoIT_AssignedUserId__c.field-meta.xml
<CustomField>
    <fullName>CoIT_AssignedUserId__c</fullName>
    <formula>FSSK__FSK_Assigned_Service_Resource__r.RelatedRecordId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned User Id</label>
    <type>Text</type>
</CustomField>