force-app/main/default/objects/ServiceAppointment/fields/CoIT_AutomaticScheduling__c.field-meta.xml
<CustomField>
    <fullName>CoIT_AutomaticScheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic Scheduling</label>
    <type>Checkbox</type>
</CustomField>