force-app/main/default/objects/ServiceAppointment/fields/CoIT_AutomaticSchedulingAttempts__c.field-meta.xml
<CustomField>
    <fullName>CoIT_AutomaticSchedulingAttempts__c</fullName>
    <label>Automatic Scheduling Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>