force-app/main/default/objects/ServiceAppointment/fields/CoIT_Check_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Check_Approval_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Approval Status</label>
    <type>Checkbox</type>
</CustomField>