force-app/main/default/objects/ServiceAppointment/fields/CoIT_Check_Upload_Image__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Check_Upload_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Upload Image</label>
    <type>Checkbox</type>
</CustomField>