force-app/main/default/objects/ServiceAppointment/fields/CoIT_Create_WorkOffer__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Create_WorkOffer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Work Offer</label>
    <type>Checkbox</type>
</CustomField>