force-app/main/default/objects/ServiceAppointment/fields/CoIt_Dispatched_Automatic_PKDP__c.field-meta.xml
<CustomField>
    <fullName>CoIt_Dispatched_Automatic_PKDP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dispatched Automatic PKDP</label>
    <type>Checkbox</type>
</CustomField>