force-app/main/default/objects/ServiceAppointment/fields/CoIT_IsAutomaticDispatched__c.field-meta.xml
<CustomField>
    <fullName>CoIT_IsAutomaticDispatched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Automatic Dispatched</label>
    <type>Checkbox</type>
</CustomField>