force-app/main/default/objects/ServiceAppointment/fields/CoIT_Kilometer__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Kilometer__c</fullName>
    <label>Kilometer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>