force-app/main/default/objects/ServiceAppointment/fields/CoIT_Numero_de_autorizacion__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Numero_de_autorizacion__c</fullName>
    <label>Numero de autorizacion</label>
    <length>32</length>
    <type>Text</type>
</CustomField>