force-app/main/default/objects/ServiceAppointment/fields/CoIT_Numero_de_caso_SIAB__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Numero_de_caso_SIAB__c</fullName>
    <label>Numero de siniestro</label>
    <length>32</length>
    <type>Text</type>
</CustomField>