force-app/main/default/objects/ServiceAppointment/fields/CoIT_OnSiteTime__c.field-meta.xml
<CustomField>
    <fullName>CoIT_OnSiteTime__c</fullName>
    <formula>FSSK__FSK_Work_Order__r.CoIT_Expected_InProgress_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Site Date</label>
    <type>DateTime</type>
</CustomField>