force-app/main/default/objects/ServiceAppointment/fields/CoIT_RequireRescheduled__c.field-meta.xml
<CustomField>
    <fullName>CoIT_RequireRescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Rescheduled?</label>
    <type>Checkbox</type>
</CustomField>