force-app/main/default/objects/ServiceAppointment/fields/CoIT_Rescheduling_Date__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Rescheduling_Date__c</fullName>
    <label>Rescheduling Date</label>
    <type>DateTime</type>
</CustomField>