force-app/main/default/objects/ServiceAppointment/fields/CoIT_SecondScheduling_PolicyUsed__c.field-meta.xml
<CustomField>
    <fullName>CoIT_SecondScheduling_PolicyUsed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Scheduling Policy Used</label>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipLabel>Service Appointments (Second Scheduling Policy Used)</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>