force-app/main/default/objects/ServiceAppointment/fields/CoIT_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Status_Reason__c</fullName>
    <label>Estado Razón</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novedades con Proveedor</fullName>
            </value>
            <value>
                <fullName>CLS cancela el servicio</fullName>
            </value>
            <value>
                <fullName>Cliente no esta en sitio</fullName>
            </value>
            <value>
                <fullName>Complejidad Tecnica</fullName>
            </value>
            <value>
                <fullName>El cliente solicita reagendar</fullName>
            </value>
            <value>
                <fullName>Falta definicion por Asistencia</fullName>
            </value>
            <value>
                <fullName>Falta herramientas y/o repuesto</fullName>
            </value>
            <value>
                <fullName>No cobertura</fullName>
            </value>
            <value>
                <fullName>No disponibilidad del cliente</fullName>
            </value>
            <value>
                <fullName>Requiere segundo concepto</fullName>
            </value>
            <value>
                <fullName>Seguimiento de caso presencial</fullName>
            </value>
            <value>
                <fullName>Seguimiento de caso virtual</fullName>
            </value>
            <value>
                <fullName>Fallido</fullName>
            </value>
            <value>
                <fullName>Cliente cancela servicio</fullName>
            </value>
            <value>
                <fullName>Asignacion manual en Siab</fullName>
            </value>
            <value>
                <fullName>Cliente cancela el servicio</fullName>
                <isActive>false</isActive>
                <label>Cliente cancela el servicio</label>
            </value>
            <value>
                <fullName>El cliente soluciono la emergencia por su cuenta</fullName>
                <isActive>false</isActive>
                <label>El cliente soluciono la emergencia por su cuenta</label>
            </value>
            <value>
                <fullName>Error en la direccion</fullName>
                <isActive>false</isActive>
                <label>Error en la direccion</label>
            </value>
            <value>
                <fullName>Hay otro tecnico en sitio</fullName>
                <isActive>false</isActive>
                <label>Hay otro tecnico en sitio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>