force-app/main/default/objects/ServiceAppointment/fields/CoIT_Status_Subreason__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Status_Subreason__c</fullName>
    <label>Estado Subrazón</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CoIT_Status_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente no toma servicio</fullName>
            </value>
            <value>
                <fullName>El cliente ya solucionó por su cuenta</fullName>
            </value>
            <value>
                <fullName>El cliente cancela por demora en la prestación - BC</fullName>
            </value>
            <value>
                <fullName>No reporta ausencia y/o técnico ocupado</fullName>
            </value>
            <value>
                <fullName>Rechazo de servicio</fullName>
            </value>
            <value>
                <fullName>Proveedor cancela el servicio pero tiene otro recurso</fullName>
            </value>
            <value>
                <fullName>Técnico y/o proveedor no contesta</fullName>
            </value>
            <value>
                <fullName>Proveedor va tarde y existe un proveedor mas cerca</fullName>
            </value>
            <value>
                <fullName>Causa errónea</fullName>
            </value>
            <value>
                <fullName>Cliente cancelo el servicio</fullName>
            </value>
            <value>
                <fullName>El cliente soluciono la emergencia por su cuenta</fullName>
            </value>
            <value>
                <fullName>Error en la direccion</fullName>
            </value>
            <value>
                <fullName>Hay otro tecnico en sitio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>