force-app/main/default/objects/ServiceAppointment/fields/CoIT_ThirdScheduling_PolicyUsed__c.field-meta.xml
<CustomField>
    <fullName>CoIT_ThirdScheduling_PolicyUsed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Scheduling Policy Used</label>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipLabel>Service Appointments (Third Scheduling Policy Used)</relationshipLabel>
    <relationshipName>Service_Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>