force-app/main/default/objects/ServiceAppointment/fields/CoIT_WOM_Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WOM_Appointment_Type__c</fullName>
    <label>Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CoIT_WOM_Appointment_Type</valueSetName>
    </valueSet>
</CustomField>