force-app/main/default/objects/ServiceAppointment/fields/CoIT_WOM_Parent_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WOM_Parent_Record_Type_Name__c</fullName>
    <label>Parent Record Type Name</label>
    <length>24</length>
    <type>Text</type>
</CustomField>