force-app/main/default/objects/ServiceAppointment/fields/CoIT_WOM_ScheduleExtended__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WOM_ScheduleExtended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CoIT WOM ScheduleExtended</label>
    <type>Checkbox</type>
</CustomField>