force-app/main/default/objects/ServiceAppointment/fields/CoIT_WOM_ValidateSchedule__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WOM_ValidateSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required Validate Schedule</label>
    <type>Checkbox</type>
</CustomField>