force-app/main/default/objects/ServiceAppointment/fields/CoIT_Work_Offer_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Work_Offer_Quantity__c</fullName>
    <label>Work Offer Quantity</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>