force-app/main/default/objects/ServiceAppointment/fields/CoIT_Work_Type_Principal__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Work_Type_Principal__c</fullName>
    <formula>FSSK__FSK_Work_Order__r.WorkType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work type principal</label>
    <type>Text</type>
</CustomField>