force-app/main/default/objects/ServiceAppointment/fields/Distrito__c.field-meta.xml
<CustomField>
    <fullName>Distrito__c</fullName>
    <formula>FSSK__FSK_Work_Order__r.CoIT_Distrito__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distrito</label>
    <type>Text</type>
</CustomField>