force-app/main/default/objects/ServiceAppointment/fields/FSL__InJeopardyReason__c.field-meta.xml
<CustomField>
    <fullName>FSL__InJeopardyReason__c</fullName>
    <label>In Jeopardy Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No candidates found</fullName>
            </value>
            <value>
                <fullName>No technicians were found available for the offer</fullName>
            </value>
            <value>
                <fullName>Technician is taking more time than required</fullName>
            </value>
            <value>
                <fullName>Technician has not arrived on site</fullName>
            </value>
            <value>
                <fullName>Technician has not started travel</fullName>
            </value>
            <value>
                <fullName>Technician has not accepted the service</fullName>
            </value>
            <value>
                <fullName>Service not dispatched to technician</fullName>
            </value>
            <value>
                <fullName>Unscheduled service</fullName>
            </value>
            <value>
                <fullName>Failed service, contact customer</fullName>
            </value>
            <value>
                <fullName>Urgent, repair not possible, assistance concept required</fullName>
            </value>
            <value>
                <fullName>The service has not been accepted by any technician</fullName>
            </value>
            <value>
                <fullName>Service accepted but not scheduled</fullName>
            </value>
            <value>
                <fullName>Delayed Finish</fullName>
                <isActive>false</isActive>
                <label>Delayed Finish</label>
            </value>
            <value>
                <fullName>Delayed Start</fullName>
                <isActive>false</isActive>
                <label>Delayed Start</label>
            </value>
            <value>
                <fullName>Due Date Approaching</fullName>
                <isActive>false</isActive>
                <label>Due Date Approaching</label>
            </value>
            <value>
                <fullName>No Response</fullName>
                <isActive>false</isActive>
                <label>No Response</label>
            </value>
            <value>
                <fullName>No se encontraron técnicos disponibles para la oferta</fullName>
                <isActive>false</isActive>
                <label>No se encontraron técnicos disponibles para la oferta</label>
            </value>
            <value>
                <fullName>Servicio no agendado</fullName>
                <isActive>false</isActive>
                <label>Servicio no agendado</label>
            </value>
            <value>
                <fullName>Servicio no despachado al técnico</fullName>
                <isActive>false</isActive>
                <label>Servicio no despachado al técnico</label>
            </value>
            <value>
                <fullName>Técnico está tardando más tiempo del requerido</fullName>
                <isActive>false</isActive>
                <label>Técnico está tardando más tiempo del requerido</label>
            </value>
            <value>
                <fullName>Técnico no ha aceptado el servicio</fullName>
                <isActive>false</isActive>
                <label>Técnico no ha aceptado el servicio</label>
            </value>
            <value>
                <fullName>Técnico no ha iniciado desplazamiento</fullName>
                <isActive>false</isActive>
                <label>Técnico no ha iniciado desplazamiento</label>
            </value>
            <value>
                <fullName>Técnico no ha llegado a sitio</fullName>
                <isActive>false</isActive>
                <label>Técnico no ha llegado a sitio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>