force-app/main/default/objects/ServiceAppointment/fields/ProveedorAsignado__c.field-meta.xml
<CustomField>
    <fullName>ProveedorAsignado__c</fullName>
    <formula>FSSK__FSK_Assigned_Service_Resource__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proveedor asignado</label>
    <type>Text</type>
</CustomField>