force-app/main/default/objects/ServiceAppointment/fields/Reminder_Mark__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Mark__c</fullName>
    <defaultValue>false</defaultValue>
    <description>campos que ayuda a saber si el mensaje de recordatorio ya fue enviado</description>
    <label>Reminder Mark</label>
    <type>Checkbox</type>
</CustomField>