force-app/main/default/objects/ServiceAppointment/validationRules/Base_Technichian_EarliestStartTime.validationRule-meta.xml
<ValidationRule>
    <fullName>Base_Technichian_EarliestStartTime</fullName>
    <active>true</active>
    <description>No permite al tecnico base cambiar el campo Earliest Start Time</description>
    <errorConditionFormula>$Profile.Name = &quot;CoIT Bolivar Base Technician Profile&quot; &amp;&amp;
(
ISCHANGED( EarliestStartTime )
)</errorConditionFormula>
    <errorMessage>No puedes editar este campo</errorMessage>
</ValidationRule>