force-app/main/default/objects/ServiceAppointment/validationRules/BaseTechnician_Restrict_Field_Changes_P.validationRule-meta.xml
<ValidationRule>
    <fullName>BaseTechnician_Restrict_Field_Changes_P</fullName>
    <active>true</active>
    <description>Evita que los usuarios con el perfil &quot;CoIT Bolivar Base Technician Profile&quot; modifiquen los campos &quot;SchedStartTime&quot; y &quot;Assigned Service Resource&quot; en las citas de servicio.</description>
    <errorConditionFormula>(
    ($Profile.Name = &quot;CoIT Bolivar Base Technician Profile&quot; || $Profile.Name = &quot;CoIT Proveedor Base Partner Bolivar&quot;) 
    &amp;&amp;
    (
        ISPICKVAL(Status, &quot;Travel&quot;) 
        || ISPICKVAL(Status, &quot;In Progress&quot;) 
        || ISPICKVAL(Status, &quot;Completed&quot;) 
        || ISPICKVAL(Status, &quot;Canceled&quot;)
    )
    &amp;&amp;
    (
        ISCHANGED(SchedStartTime) 
        || ISCHANGED(FSSK__FSK_Assigned_Service_Resource__c)
    )
)
||
(
    ($Profile.Name = &quot;CoIT Bolivar Base Technician Profile&quot; || 
     $Profile.Name = &quot;CoIT Proveedor Base Partner Bolivar&quot;) 
    &amp;&amp;
    ISPICKVAL(Status, &quot;Dispatched&quot;) 
    &amp;&amp;
    ISCHANGED(SchedStartTime)
)</errorConditionFormula>
    <errorMessage>No puedes cambiar la programación de la cita de servicio</errorMessage>
</ValidationRule>