force-app/main/default/objects/ServiceAppointment/validationRules/BaseTechnician_Restrict_State_By_Assigne.validationRule-meta.xml
<ValidationRule>
    <fullName>BaseTechnician_Restrict_State_By_Assigne</fullName>
    <active>true</active>
    <description>Evita que los usuarios con el perfil &quot;CoIT Bolivar Base Technician Profile&quot; cambien el estado de citas asignadas a otros recursos de servicio.</description>
    <errorConditionFormula>(
    ($Profile.Name = &quot;CoIT Bolivar Base Technician Profile&quot; || $Profile.Name = &quot;CoIT Proveedor Base Partner Bolivar&quot;) 
&amp;&amp;
    (ISPICKVAL(Status, &quot;Dispatched&quot;) || ISPICKVAL(Status, &quot;Travel&quot;) || ISPICKVAL(Status, &quot;In Progress&quot;) || ISPICKVAL(Status, &quot;Completed&quot;) || ISPICKVAL(Status, &quot;Canceled&quot;))
&amp;&amp;
    ISCHANGED(Status) 
&amp;&amp;
    FSSK__FSK_Assigned_Service_Resource__r.RelatedRecord.Id != $User.Id
)</errorConditionFormula>
    <errorMessage>No puedes cambiar el estado de una cita que no está asignada a tu recurso.</errorMessage>
</ValidationRule>