force-app/main/default/objects/ServiceAppointment/validationRules/Change_status_base.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_status_base</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    $Profile.Name = &quot;CoIT Proveedor Base Partner Bolivar&quot;,
    ISCHANGED(Status)

)</errorConditionFormula>
    <errorMessage>No tienes permisos para editar el estado de una cita de servicio.</errorMessage>
</ValidationRule>