force-app/main/default/objects/ServiceAppointment/validationRules/Change_status_base_Dispatched.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_status_base_Dispatched</fullName>
    <active>false</active>
    <errorConditionFormula>$Profile.Name = &quot;CoIT Proveedor Base Partner Bolivar&quot; &amp;&amp; ISPICKVAL(Status, &quot;Dispatched&quot;)</errorConditionFormula>
    <errorMessage>No tienes permisos para cambiar de estado la cita</errorMessage>
</ValidationRule>