force-app/main/default/objects/ServiceAppointment/validationRules/Change_status_base_Scheduled.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_status_base_Scheduled</fullName>
    <active>false</active>
    <errorConditionFormula>$Profile.Name =
&quot;CoIT Proveedor Base Partner Bolivar&quot; &amp;&amp; ISPICKVAL(Status, &quot;Scheduled&quot;)</errorConditionFormula>
    <errorMessage>No Tienes permisos para cambiar estado</errorMessage>
</ValidationRule>