force-app/main/default/objects/ServiceAppointment/validationRules/Restreiccion_Complete_Supervisor.validationRule-meta.xml
<ValidationRule>
    <fullName>Restreiccion_Complete_Supervisor</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name =
&quot;CoIT Bolivar Supervisor Profile&quot; &amp;&amp; ISPICKVAL(Status, &quot;Complete&quot;)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>No tiene permisos para cambiar este estado</errorMessage>
</ValidationRule>