force-app/main/default/objects/ServiceAppointment/validationRules/Restriccion_Base_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Restriccion_Base_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name =
&quot;CoIT Proveedor Base Partner Bolivar&quot; &amp;&amp; ISPICKVAL(Status, &quot;Travel&quot;)</errorConditionFormula>
    <errorMessage>No tiene permisos para cambiar este estado</errorMessage>
</ValidationRule>